tests/NormalTests/paczka1/fuzzy1/57506301.err
Error in line 5: kqfqrx S263 53,8
Error in line 27: A500 A356 80,6
Error in line 37: e3OF A500 60,5
Error in line 25: Y6w7fqS A500 43,0
